--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A library that provides various visualization elements for vue.js",
-  "main": "dist/vue-graph.js",
+  "main": "example/bundle.js",
   "files": [
     "dist"
   ],
   "scripts": {
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "keywords": [
     "vue",
@@ -25,10 +27,24 @@
   "homepage": "https://github.com/juijs/vue-graph",
   "author": "alvin.h <seogi777@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "vue": "^2.2.4",
-    "juijs-chart": "^2.1.0-rc.12"
+  "peerDependencies": {
+    "juijs-chart": "^2.1.0-rc.12",
+    "vue": "^2.5.11"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
