--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "webpack"
   },
   "keywords": [
     "vue",
@@ -22,29 +22,17 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/juijs/vue-graph.git"
+    "url": "https://github.com/juijs/vuenpm -graph.git"
   },
   "homepage": "https://github.com/juijs/vue-graph",
   "author": "alvin.h <seogi777@gmail.com>",
   "license": "MIT",
-  "peerDependencies": {
-    "juijs-chart": "^2.1.0-rc.12",
-    "vue": "^2.5.11"
-  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
+  },
+  "dependencies": {
+    "juijs-chart": "^2.1.0-rc.12",
+    "vue": "^2.5.16"
   }
 }
