--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productionName": "Vue Graph",
   "version": "0.0.2",
   "description": "A library that provides various visualization elements for vue.js",
-  "main": "example/bundle.js",
+  "main": "dist/vue-graph.js",
   "files": [
     "dist"
   ],
@@ -32,7 +32,6 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "juijs-chart": "^2.1.0-rc.12",
-    "vue": "^2.5.16"
+    "juijs-chart": "^2.1.0-rc.12"
   }
 }
