--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A library that provides various visualization elements for vue.js",
   "main": "dist/vue-graph.js",
   "files": [
@@ -23,7 +23,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/juijs/vuenpm -graph.git"
+    "url": "https://github.com/juijs/vue-graph.git"
   },
   "homepage": "https://github.com/juijs/vue-graph",
   "author": "alvin.h <seogi777@gmail.com>",
