--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-graph",
   "productionName": "Vue Graph",
   "version": "0.1.0",
-  "description": "A library that provides various visualization elements for vue.js",
+  "description": "A library that provides various visualization elements for Vue.js",
   "main": "src/vue-graph.js",
   "files": [
     "dist",
