--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "A library that provides various visualization elements for Vue.js",
   "main": "src/vue-graph.js",
   "files": [
@@ -39,14 +39,15 @@
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "vue-loader": "^15.2.4",
+    "vue-loader": "^15.2.6",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "dependencies": {
-    "juijs-chart": "^2.1.1",
+    "juijs-chart": "^2.1.3-es6",
     "vue": "^2.5.16"
   }
 }
