--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "description": "A library that provides various visualization elements for Vue.js",
   "main": "src/main.js",
   "files": [
@@ -19,7 +19,8 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack-dev-server --env dev",
-    "dist": "webpack --env prod"
+    "dist": "webpack --env prod",
+    "test": "jest --config ./jest.config.js"
   },
   "keywords": [
     "vue",
@@ -41,20 +42,25 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "vue-loader": "^15.2.6",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.16.3",
+    "jest": "^23.6.0",
+    "jest-serializer-vue": "^2.0.2",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "vue-jest": "^3.0.0",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "vue-test-utils": "^1.0.0-beta.11",
+    "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "juijs-chart": "2.3.2-es6",
-    "vue": "^2.5.16"
+    "vue": "^2.5.17"
   }
 }
