--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
+    "sinon": "^7.2.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "vue-jest": "^3.0.0",
     "vue-loader": "^15.4.2",
