--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.8.7",
+  "version": "0.9.0",
   "description": "A library that provides various visualization elements for Vue.js",
-  "main": "src/main.js",
+  "main": "bundles/index.js",
   "files": [
     "bundles",
     "dist",
@@ -18,8 +18,7 @@
   ],
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --env dev",
-    "dist": "npm run test && webpack --env prod",
+    "dev": "webpack serve --env goal=dev",
     "test": "jest --config ./jest.config.js"
   },
   "keywords": [
@@ -40,28 +39,31 @@
   "author": "alvin.h <seogi777@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-jest": "^27.0.6",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.6",
     "jest-serializer-vue": "^2.0.2",
     "sinon": "^7.5.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "vue-jest": "^3.0.5",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.7",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-node-externals": "^1.7.2"
+    "vue-loader": "^16.5.0",
+    "terser-webpack-plugin": "^5.1.3",
+    "@vue/compiler-sfc": "^3.2.4",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-preset-app": "^4.2.3",
+    "@vue/babel-preset-jsx": "^1.2.4",
+    "@vue/cli": "^4.2.3",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "webpack": "^5.40.0",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "juijs-chart": "2.6.9",
-    "vue": "^2.6.7"
+    "juijs-chart": "2.6.12",
+    "vue": "^3.2.4",
+    "@vue/compat": "^3.2.4"
   }
 }
