--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A library that provides various visualization elements for Vue.js",
   "main": "bundles/index.js",
   "files": [
@@ -41,20 +41,21 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.0.6",
+    "jest": "^26.6.3",
     "jest-serializer-vue": "^2.0.2",
     "sinon": "^7.5.0",
     "vue-loader": "^16.5.0",
+    "vue-jest": "^5.0.0-alpha.10",
     "terser-webpack-plugin": "^5.1.3",
     "@vue/compiler-sfc": "^3.2.4",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/babel-preset-app": "^4.2.3",
     "@vue/babel-preset-jsx": "^1.2.4",
     "@vue/cli": "^4.2.3",
-    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/test-utils": "^2.0.0-rc.13",
     "webpack": "^5.40.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
