--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-graph",
   "productionName": "Vue Graph",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "A library that provides various visualization elements for Vue.js",
   "main": "bundles/index.js",
   "files": [
@@ -64,7 +64,6 @@
   },
   "dependencies": {
     "juijs-chart": "2.6.12",
-    "vue": "^3.2.4",
-    "@vue/compat": "^3.2.4"
+    "vue": "^3.2.4"
   }
 }
